--- a/backend/docker-compose.yaml
+++ b/backend/docker-compose.yaml
@@ -1,5 +1,3 @@
-version: "3.9"
-
 services:
   api:
     build: .
@@ -13,7 +11,7 @@ services:
       - db
 
   db:
-    image: postgres:16
+    image: "postgres:latest"
     ports:
       - "5432:5432"
     environment:
@@ -21,7 +19,7 @@ services:
       POSTGRES_PASSWORD: postgres
       POSTGRES_DB: fatigueless
     volumes:
-      - postgres_data:/var/lib/postgresql/data
+      - postgres_data:/var/lib/postgresql
 
 volumes:
   postgres_data:
